[project]
name = "spark-lakehouse-delta-iceberg"
version = "0.1.0"
description = "Trabalho de Arquitetura de Dados - UniSatc"
authors = [
    {name = "Frank Cardoso", email = "frank.cardoso032@gmail.com"}
]
readme = "README.md"
# Deixamos >=3.11 para aceitar seu Python 3.14, mas rodar como se fosse estável
requires-python = ">=3.11"

dependencies = [
    "pyspark==3.5.0",
    "delta-spark==3.1.0"
]

[tool.poetry.group.dev.dependencies]
mkdocs = "^1.5.0"
mkdocs-material = "^9.5.0"